index file modified

--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-Hello.. This is version 3
-After permission
-this is modification
+hello world your are enter in the era of automation. and i am working over it so its my first experiment over cicd pipeline.
